--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "react-test-renderer": "^16.8.4"
   },
   "private": true
 }
